--- a/notebooks/06_accounting.qmd
+++ b/notebooks/06_accounting.qmd
@@ -9,18 +9,9 @@ from: markdown+emoji
 
 ## Introduction
 
-The main challenges users may face adapting Artemis workflows to Gadi are:
+Gadi does not use the 'fair share' policy that Artemis users are familiar with. Gadi uses the concept of a 'service unit' (SU) and each project has a finite allocation of SU (often referred to as KSU for 1,000 SU) which they cannot exceed. NCI projects on Gadi also have fixed allocations with scratch, and this includes physical space as well as iNodes. Users are responsible for managing their SU and storage allocations. NCI allocates scratch and iNode limits, and SIH allocates gdata limits.
 
-- Understanding NCI accounting of KSU, disk and iNode limits
-- [Gadi walltime limit of 48 hours](./12_walltime.qmd)
-- [Adjusting PBS directives to suit Gadi requirements and queue structure](./08_job_script.qmd)
-- [Lack of internet access for Gadi compute nodes](./08_job_script.qmd#lack-of-internet-access-on-compute-nodes)
-- [Data transfer](./05_data_transfer.qmd)
-- [Automatic 100-day Gadi /scratch purge policy](https://opus.nci.org.au/spaces/Help/pages/241926268/Recover+Files...#RecoverFiles...-RecoverQuarantinedFilesonscratch)
-- [Software installation and version upgrades on Gadi](./11_software.qmd) 
-- [Job arrays not supported on Gadi](./13_parallel_jobs.qmd) 
-
-In this section, we will look at the first challenge on this list. For the remaining challenges, please visit the specific linked content. We will run training sessions on some of these during the lead up to the Artemis decommission date.
+In this section, we will describe NCI accounting of KSU, disk and iNode limits.
 
 ## What are the important accounting metrics? 
 
