--- a/notebooks/08_job_script.qmd
+++ b/notebooks/08_job_script.qmd
@@ -9,22 +9,9 @@ from: markdown+emoji
 
 ## Introduction
 
-In this section, we will compare Artemis job scripts to Gadi job scripts, and provide some guidance on how to adapt your Artemis workflow to NCI Gadi HPC. 
+In this section, we will compare Artemis job scripts to Gadi job scripts, and provide some guidance on how to adapt your Artemis workflow to NCI Gadi HPC. This will include the similarities and differences with the PBS directives component of your scripts, selecting the right compute queue for your job based on Gadi's queue hardware and resource limits, and how to work around the lack of internet access for Gadi compute queues. 
 
 [Watch the pre-recorded session](https://youtu.be/ZBOycXymok4)
-
-The main challenges users may face adapting Artemis workflows to Gadi are:
-
-- Adjusting PBS directives to suit Gadi requirements and queue structure
-- Lack of internet access for Gadi compute nodes 
-- [Data transfer](./05_data_transfer.qmd)
-- [Gadi walltime limit of 48 hours](./12_walltime.qmd)
-- [Understanding NCI accounting of KSU, disk and iNode limits](./06_accounting.qmd)
-- [Automatic 100-day Gadi /scratch purge policy](https://opus.nci.org.au/spaces/Help/pages/241926268/Recover+Files...#RecoverFiles...-RecoverQuarantinedFilesonscratch)
-- [Software installation and version upgrades on Gadi](./11_software.qmd) 
-- [Job arrays not supported on Gadi](./13_parallel_jobs.qmd) 
-
-In this section, we will look at the first two on this list. For the remaining challenges, please visit the specific linked content. We will run training sessions on some of these during the lead up to the Artemis decommission date.
 
 ## Job scheduler 
 
