--- a/notebooks/10_job_efficiency.qmd
+++ b/notebooks/10_job_efficiency.qmd
@@ -9,24 +9,10 @@ from: markdown+emoji
 
 ## Introduction
 
-In this section, we will consider job optimisation and benchmarking for compute resource usage efficiency. 
+In this section, we will explore how **optimising** your workload through splitting/checkpointing jobs and optimising compute resource requests for Gadi queues can help **minimise your walltime** and **use less service units**. 
 
 [Watch the pre-recorded session](https://youtu.be/4ztdcnfIaP4)
 
-The main challenges users may face adapting Artemis workflows to Gadi are:
-
-- [Gadi walltime limit of 48 hours](./12_walltime.qmd)
-- [Adjusting PBS directives to suit Gadi requirements and queue structure](./08_job_script.qmd)
-- [Lack of internet access for Gadi compute nodes](./08_job_script.qmd#lack-of-internet-access-on-compute-nodes)
-- [Data transfer](./05_data_transfer.qmd)
-- [Understanding NCI accounting of KSU, disk and iNode limits](./06_accounting.qmd)
-- [Automatic 100-day Gadi /scratch purge policy](https://opus.nci.org.au/spaces/Help/pages/241926268/Recover+Files...#RecoverFiles...-RecoverQuarantinedFilesonscratch)
-- [Software installation and version upgrades on Gadi](./11_software.qmd) 
-- [Job arrays not supported on Gadi](./13_parallel_jobs.qmd) 
-
-In this section, we will broadly address the first two challenges on this list, exploring how **optimising your workload through splitting/checkpointing jobs and optimising compute resource requests for Gadi queues can help minimise your walltime and use less KSU**. 
-
-For the remaining challenges, please visit the specific linked content. We will run training sessions on some of these during the lead up to the Artemis decommission date.
 
 ## What is workflow optimisation
 
