--- a/notebooks/02_system_setup.qmd
+++ b/notebooks/02_system_setup.qmd
@@ -12,7 +12,7 @@ This section will point you to the right sections of the NCI documentation and u
 ## Resources
 
 - [What is Gadi?](https://opus.nci.org.au/spaces/Help/pages/236881323/What+is+Gadi+...)
-- [Getting Started at NCI](https://opus.nci.org.au/)
+- [Getting Started at NCI](https://opus.nci.org.au/spaces/Help/pages/230490436/Getting+Started+at+NCI...)
 - [Gadi User Guide](https://opus.nci.org.au/display/Help/Gadi+User+Guide)
 - [Gadi FAQs](https://opus.nci.org.au/pages/viewpage.action?pageId=236881318)
 
